# rust-async-graphql-sample

./: .env  .gitignore  Cargo.toml  README.md  compose.yaml
migrations/: 20220812024822_first-migration.sql
pj_app/: Cargo.toml
pj_app/src/: di.rs  error.rs  main.rs
pj_app/src/infra/repository/: product_repository.rs
pj_app/src/presentation/graphql/: mod.rs  query_usecase.rs
pj_app/src/presentation/graphql/schema/: mod.rs
pj_app/src/presentation/graphql/schema/product/: mod.rs  query_product.rs  type_product.rs
pj_common/: Cargo.toml
pj_core/: Cargo.toml
pj_core/src/: error.rs  lib.rs
pj_core/src/model/: product.rs
pj_core/src/repository_trait/: mod.rs
pj_core/src/usecase/: get_product.rs  mod.rs
pj_domain/: Cargo.toml
pj_graphql/: Cargo.toml
pj_infra/: Cargo.toml
pj_infra/src/entity/: product.rs
pj_infra/src/repository/: product_repository.rs
pj_usecase/: Cargo.toml
