[package]
name = "pj_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.61"
validator = { version = "0.16.0", features = ["derive"] }
derive-getters = "0.2.0"
derive_more = { version = "0.99.17", features = ['constructor'] }

